<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/triggerTimesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/triggerTimes" />

        <EditText
            android:id="@+id/triggerTimesEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"           
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/triggerTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/triggerTimesLayout"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/triggerTime" />

        <EditText
            android:id="@+id/triggerTimeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"          
            android:visibility="visible" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/use_password_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/triggerTimeLayout"
        android:hint="@string/use_passwd"
        android:onClick="onClick" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/use_password_cb"
        android:hint="@string/passwd_hine"
        android:inputType="numberPassword"      
        android:visibility="visible" />

    <TextView
        android:id="@+id/setting_hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEt"
        android:text="@string/setting_hint" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/saveSettingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/save" />

        <Button
            android:id="@+id/returnBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/back" />
    </LinearLayout>

</RelativeLayout>